--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,8 +1,8 @@
-<header style="background-color:#101010 !important;">
+<header>
         <div class="navbarlogo">
         <div class="navbar-innerlogo">
           <div class="container py-3">
-                  <h1 style="color:yellow !important; font-size:50px; ">WELCOME TO Hospital Management System</h1>
+                  <h1 class="header_logo">ABC Hospital Management System</h1>
             </div>
           </div>
         </div>
