--- a/templates/login.html
+++ b/templates/login.html
@@ -4,21 +4,10 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login1.css') }}">
-<div class="container">
-    <!-- {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div class="alert alert-{{category}}">
-                        <p>{{ message }}</p>
-                    </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %} -->
-<div class="d-flex justify-content-center h-100">
+
+<div class="col-sm-5 mx-auto">
    
  <div class="card">
-    <!-- <h1 style="color: aliceblue;text-align: center;padding-bottom:50px;padding-top: 25px;">RETAIL BANKING</h1> -->
      <div class="card-header">
          <h3>Sign In</h3>
         
@@ -66,15 +55,4 @@
 
  </div>
 </div>
-</div>
 {% endblock %}
-<!-- <script>
-function myFunction() {
-var x = document.getElementById("myInput");
-if (x.type === "password") {
-x.type = "text";
-} else {
-x.type = "password";
-}
-}
-</script> -->
