--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,7 +57,6 @@ input:focus{
 }
 .navbar{
     padding: 0 0 10px 0;
-    width: 50%;
 }
 a{
     color: black;
@@ -72,6 +71,18 @@ a{
     border: 1px black solid;
     background-color: #3b88f8;
 }
+
+.subnavbtn{
+    font-size: 18px;
+    cursor: pointer;
+    padding: 10px 15px;
+    width: 160px;
+    color: black;
+    text-decoration: none;
+    border: 1px black solid;
+    background-color: #3b88f8;
+}
+
 .layout_content{
     background-color: #3b88f8;
     min-height: -webkit-calc(100vh - 150px);
@@ -80,4 +91,24 @@ a{
     padding: 5px;
     border: 2px black solid;
     background-color: #99cafb;
+}
+.subnav-content{
+    display: none;
+    position: absolute;
+    width: 160px;
+    z-index: 1;
+}
+.subnavbtn i.fa {
+    float: right;
+    padding-top: 5px;
+}
+.subnav:hover .subnav-content{
+    display: block;
+}
+.subnav-content .nav-link {
+    background-color: #99cafb;
+    font-size: 16px;
+}
+.subnav-content .nav-link:hover {
+    background-color: #3b88f8;
 }
