--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,17 +1,35 @@
-<div class="navbar mx-auto">
+<div class="navbar col-sm-8 mx-auto">
   {% if session['user'] %}
-    <a href="{{ url_for('dashboard') }}" class="nav-link {% if home %}active{% endif %}">Home</a>
     {% if session['usert']=="RDE" %}
       <div class="subnav">
-        <button class="subnavbtn">Patient Management <i class="fa fa-caret-down"></i></button>
+        <div class="subnavbtn">Patient <i class="fa fa-caret-down"></i></div>
         <div class="subnav-content">
           <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient</a>
-         
+          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient sdfsf</a>
+          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient</a>
+          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient</a>
+        </div>
+      </div>
+      <div class="subnav">
+        <div class="subnavbtn">Pharmacy <i class="fa fa-caret-down"></i></div>
+        <div class="subnav-content">
+          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient</a>
+          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient sdfsf</a>
+          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient</a>
+          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient</a>
+        </div>
+      </div>
+      <div class="subnav">
+        <div class="subnavbtn">Diagnostics <i class="fa fa-caret-down"></i></div>
+        <div class="subnav-content">
+          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient</a>
+          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient sdfsf</a>
+          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient</a>
+          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient</a>
         </div>
       </div>
      
     {% endif %}
-    <a href="#contact">Contact Us</a>
     <a href="{{ url_for('logout') }}" class="nav-link">Logout</a>
   {% endif %}
 </div>
