--- a/templates/addpatient.html
+++ b/templates/addpatient.html
@@ -27,8 +27,14 @@
                    <input class="form-control" name="Date_of_Admission" id="Date_of_Admission" type="date" placeholder="Date of Admission" required maxlength="100">
                 </div>
                 <div class="form-group input-group mb-3">
+                   
                     <label class="m-auto pr-3" for="typeofbed" style="color:#000; font-weight: bold; font-size:18px ">Type of Bed<span style="color:#ff0000"><sup>*</sup></span></label>
-                   <input class="form-control" name="typeofbed" id="typeofbed" type="textfield" placeholder="type of bed" required maxlength="100">
+        
+                    <select class="form-control" id="typeofbed" name="typeofbed" required>
+                     <option value="General ward">General ward</option>
+                     <option value="semi sharing">semi sharing</option>
+                     <option value="single room">single room</option>
+                   </select>
                 </div>
                 <div class="form-group input-group mb-3">
                     <label class="m-auto pr-3" for="address" style="color:#000; font-weight: bold; font-size:18px ">Address<span style="color:#ff0000"><sup>*</sup></span></label>
