--- a/templates/viewpatient.html
+++ b/templates/viewpatient.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Account Status{% endblock %}
+{% block title %}View Patient {endblock %}
 
 {% block content %}
 <html>
@@ -26,7 +26,7 @@
     
     <div class="row col-md-12 col-xs-12">
         <div class="table-responsive">
-            <h3 style="text-align: center;">Account Status</h3>
+            <h3 style="text-align: center;">View Patient</h3>
             <table class="table table-striped table-hover table-condensed table-bordered" id="Tabla">
                 <thead>
                 <tr class="info">
