--- a/templates/viewpatient.html
+++ b/templates/viewpatient.html
@@ -1,16 +1,8 @@
 {% extends "layout.html" %}
 
-{% block title %}View Patient {endblock %}
+{% block title %}View Patient {% endblock %}
 
 {% block content %}
-<html>
-    <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    </head>
-    <body>
-
         {% if data %}
 <div class="container-fluid">
     <div class="row">
@@ -26,8 +18,8 @@
     
     <div class="row col-md-12 col-xs-12">
         <div class="table-responsive">
-            <h3 style="text-align: center;">View Patient</h3>
-            <table class="table table-striped table-hover table-condensed table-bordered" id="Tabla">
+            <h3 class="text-center mb-4">View Patient</h3>
+            <table class="table table-striped table-hover table-condensed table-bordered" id="Table">
                 <thead>
                 <tr class="info">
 
@@ -76,165 +68,10 @@
 </div>
 
 {% endif %}
-        <script>
-            $(document).ready(function () {
-  getPagination('#Tabla');
-  $('#maxRows option:last').prop('selected', true).trigger('change');
-});
-
-function getPagination(table) {
-
-  $('#maxRows').on('change', function(e) {
-    $('.pagination').html(''); // reset pagination
-    var trnum = 0; // reset tr counter
-    var maxRows = parseInt($(this).val()); // get Max Rows from select option
-    var totalRows = $(table + ' tbody tr').length; // numbers of rows
-    $(table + ' tr:gt(0)').each(function() { // each TR in  table and not the header
-      trnum++; // Start Counter
-      if (trnum > maxRows) { // if tr number gt maxRows
-
-        $(this).hide(); // fade it out
-      }
-      if (trnum <= maxRows) {
-        $(this).show();
-      } // else fade in Important in case if it ..
-    }); //  was fade out to fade it in
-    if (totalRows > maxRows) { // if tr total rows gt max rows option
-      var pagenum = Math.ceil(totalRows / maxRows); // ceil total(rows/maxrows) to get ..
-      //	numbers of pages
-      for (var i = 1; i <= pagenum;) { // for each page append pagination li
-        $('.pagination').append('<li class"wp" data-page="' + i + '">\
-<span>' + i++ + '<span class="sr-only">(current)</span></span>\
-</li>').show();
-      } // end for i
-    } // end if row count > max rows
-    $('.pagination li:first-child').addClass('active'); // add active class to the first li
-    $('.pagination li').on('click', function() { // on click each page
-      var pageNum = $(this).attr('data-page'); // get it's number
-      var trIndex = 0; // reset tr counter
-      $('.pagination li').removeClass('active'); // remove active class from all li
-      $(this).addClass('active'); // add active class to the clicked
-      $(table + ' tr:gt(0)').each(function() { // each tr in table not the header
-        trIndex++; // tr index counter
-        // if tr index gt maxRows*pageNum or lt maxRows*pageNum-maxRows fade if out
-        if (trIndex > (maxRows * pageNum) || trIndex <= ((maxRows * pageNum) - maxRows)) {
-          $(this).hide();
-        } else {
-          $(this).show();
-        } //else fade in
-      }); // end of for each tr in table
-    }); // end of on click pagination list
-
-
-  });
-
-  // end of on select change
-
-
-
-  // END OF PAGINATION
-}
-// Radio button
-$(function() {
-    $('input[name="Transactions"]').on('click', function() {
-        if ($(this).val() == 'Transactions') {
-            $('#textboxes').show();
-        }
-        else if ($(this).val() == 'Dates') {
-            $('#dates').show();
-        }
-        else {
-            $('#textboxes').hide();
-        }
+<script>
+    $(document).ready(function () {
+        getPagination('#Table');
+        $('#maxRows option:last').prop('selected', true).trigger('change');
     });
-});
-
-$(document).ready(function(){
-    $('input[type="radio"]').click(function(){
-        var inputValue = $(this).attr("value");
-        var targetBox = $("." + inputValue);
-        $(".box").not(targetBox).hide();
-        $(targetBox).show();
-    });
-});
-     </script>
-    </body>
-</html>
- 
+</script>
 {% endblock %}
-<table class="col-md-12">
-    <tbody>
-        <tr>
-            <td>
-                patient Id
-            </td>
-            <td>
-                {{ i.id }}
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Patient Name
-            </td>
-            <td>
-                {{ i.name }}
-            </td>
-        </tr>
-        <tr>
-            <td>
-               Age
-            </td>
-            <td>
-                {{ i.age }}
-            </td>
-        </tr>
-        <tr>
-            <td>
-               Date of Admission
-            </td>
-            <td>
-                {{ i.DateofAdm }}
-            </td>
-        </tr>
-        <tr>
-            <td>
-               Type of Bed
-            </td>
-            <td>
-                {{ i.TypeofBed }}
-            </td>
-        </tr>
-        <tr>
-            <td>
-                address
-            </td>
-            <td>
-                {{ i.address }}
-            </td>
-        </tr>
-        <tr>
-            <td>
-                state
-            </td>
-            <td>
-                {{ i.state }}
-            </td>
-        </tr>
-        <tr>
-            <td>
-                city
-            </td>
-            <td>
-                {{ i.city }}
-            </td>
-        </tr>
-        <tr>
-            <td>
-               Status
-            </td>
-            <td>
-                {{ i.status }}
-            </td>
-        </tr>
-    </tbody>
-  </table>
