--- a/templates/addpatient.html
+++ b/templates/addpatient.html
@@ -32,8 +32,8 @@
         
                     <select class="form-control" id="typeofbed" name="typeofbed" required>
                      <option value="General ward">General ward</option>
-                     <option value="semi sharing">semi sharing</option>
-                     <option value="single room">single room</option>
+                     <option value="semi sharing">Semi sharing</option>
+                     <option value="single room">Single room</option>
                    </select>
                 </div>
                 <div class="form-group input-group mb-3">
