--- a/templates/editpatient.html
+++ b/templates/editpatient.html
@@ -6,18 +6,19 @@
 <div class = "col-md-8 mx-auto">
     <h1 class="text-center">Edit Patient Details</h1>
     <div class="mt-5 text-center">
-            <form action="" method="POST">
+            <form action="{{ url_for('editpatient') }}" method="POST" id="edit_patient">
                 <table class="col-sm-9 mx-auto">
                     <tbody>
                         <tr>
                             <th>
                                 <div class="form-group input-group">
-                                    <label class="pl-3">Patient ID *</label>
+                                    <label class="pl-3" for="ssn_id">Patient ID *</label>
                                 </div>
                             </th>
                             <th>
                                 <div class="form-group input-group pl-3">
-                                    <input class="form-control" name="name" id="name" type="textfield" placeholder="New Name" required maxlength="50">
+                                    <input class="form-control" name="ssn_id" id="ssn_id" type="textfield" placeholder="Patient ID" required minlength="9" maxlength="9">
+                                    <span class="error_msg"></span>
                                  </div>
                             </th>
                         </tr>
@@ -29,7 +30,7 @@
                             </th>
                             <th>
                                 <div class="form-group input-group pl-3">
-                                   <input class="form-control" name="name" id="name" type="textfield" placeholder="New Name" required maxlength="50">
+                                   <input class="form-control" name="name" id="name" type="textfield" placeholder="Patient Name" required maxlength="50">
                                 </div>
                             </th>
                         </tr>
@@ -41,7 +42,8 @@
                             </th>
                             <th>
                                 <div class="form-group input-group pl-3">
-                                   <input class="form-control" name="age" id="age" type="textfield" placeholder="New Age" maxlength="3">
+                                   <input class="form-control" name="age" id="age" type="textfield" placeholder="Patient Age" maxlength="3">
+                                   <span class="error_msg"></span>
                                 </div>
                             </th>
                         </tr>
@@ -53,19 +55,23 @@
                             </th>
                             <th>
                                 <div class="form-group input-group pl-3">
-                                   <input class="form-control" name="doa" id="doa" type="textfield" placeholder="New Age" maxlength="3">
+                                   <input class="form-control" name="doa" id="doa" type="date" placeholder="Date of Admission" maxlength="3">
                                 </div>
                             </th>
                         </tr>
                         <tr>
                             <th>
                                 <div class="form-group input-group">
-                                    <label class="pl-3" for="tob">Type of Bad</label>
+                                    <label class="pl-3" for="typeofbed">Type of Bad</label>
                                 </div>
                             </th>
                             <th>
                                 <div class="form-group input-group pl-3">
-                                   <input class="form-control" name="rob" id="rob" type="textfield" placeholder="New Age" maxlength="3">
+                                    <select class="form-control" id="typeofbed" name="typeofbed" required>
+                                        <option value="General ward">General ward</option>
+                                        <option value="Semi sharing">Semi sharing</option>
+                                        <option value="Single room">Single room</option>
+                                    </select>
                                 </div>
                             </th>
                         </tr>
@@ -77,7 +83,7 @@
                             </th>
                             <th>
                                 <div class="form-group input-group pl-3">
-                                   <input class="form-control" name="address" id="address" type="textfield" placeholder="New Address" maxlength="100">
+                                   <input class="form-control" name="address" id="address" type="textfield" placeholder="Address" maxlength="100">
                                 </div>
                             </th>
                         </tr>
@@ -89,7 +95,7 @@
                             </th>
                             <th>
                                 <div class="form-group input-group pl-3">
-                                   <input class="form-control" name="state" id="state" type="textfield" placeholder="New Address" maxlength="100">
+                                   <input class="form-control" name="state" id="state" type="textfield" placeholder="State" maxlength="100">
                                 </div>
                             </th>
                         </tr>
@@ -101,7 +107,7 @@
                             </th>
                             <th>
                                 <div class="form-group input-group pl-3">
-                                   <input class="form-control" name="city" id="city" type="textfield" placeholder="New Address" maxlength="100">
+                                   <input class="form-control" name="city" id="city" type="textfield" placeholder="City" maxlength="100">
                                 </div>
                             </th>
                         </tr>
@@ -115,7 +121,7 @@
                         <tr>
                             <th colspan="2">
                                 <div class="form-group input-group mt-3">
-                                    <input type="submit" value="Update" onclick="alert('Are you Sure, You want to Edit this Patient data?')" class="btn mx-auto">
+                                    <input type="submit" value="Update" class="btn mx-auto">
                                 </div>
                             </th>
                         </tr>
