--- a/templates/viewpatient.html
+++ b/templates/viewpatient.html
@@ -5,10 +5,11 @@
 {% block content %}
         {% if data %}
 <div class="container-fluid">
+    <h3 class="text-center mb-3">View Patient</h3>
     <div class="row">
         <div class="input col-md-1 col-xs-2">
             <!--		Show Numbers Of Rows 		-->
-            <select class="form-control" name="state" id="maxRows" style="margin-bottom: 10px;height: auto;width: auto;">
+            <select class="form-control" name="state" id="maxRows" style="width: auto;">
                 <option value="5">5</option>
                 <option value="10">10</option>
                
@@ -16,9 +17,8 @@
         </div>
     </div>
     
-    <div class="row col-md-12 col-xs-12">
+    <div class="row col-md-12 col-xs-12 mt-3">
         <div class="table-responsive">
-            <h3 class="text-center mb-4">View Patient</h3>
             <table class="table table-striped table-hover table-condensed table-bordered" id="Table">
                 <thead>
                 <tr class="info">
