--- a/templates/viewpatient.html
+++ b/templates/viewpatient.html
@@ -5,7 +5,7 @@
 {% block content %}
         {% if data %}
 <div class="container-fluid">
-    <h3 class="text-center mb-3">View Patient</h3>
+    <h3 class="text-center mb-3">View Patients</h3>
     <div class="row">
         <div class="input col-md-1 col-xs-2">
             <!--		Show Numbers Of Rows 		-->
