--- a/templates/issuemedicines.html
+++ b/templates/issuemedicines.html
@@ -24,7 +24,7 @@
                         <td>
                             <div>
                                 <input class="form-control issue_med" name="ssn_id" id="ssn_id" type="textfield" placeholder="Patient ID" required minlength="9" maxlength="9">
-                                <span class="error_msg" style="position: inherit;"></span>
+                                <span class="error_msg" style="position: inherit;margin: 0;margin-top: 10px;"></span>
                             </div>
                         </td>
                         <td><div class="p_name"></div></td>
@@ -87,13 +87,13 @@
                         <tr>
                             <td>
                                 <div>
-                                    <input class="form-control" name="name" type="textfield" placeholder="Medicine Name" required minlength="2" maxlength="50">
+                                    <input class="form-control issue_med" name="name" type="textfield" placeholder="Medicine Name" required minlength="2" maxlength="50">
                                     <span class="error_msg" style="position: inherit;"></span>
                                 </div>
                             </td>
                             <td>
                                 <div>
-                                    <input class="form-control" name="quantity" type="textfield" placeholder="Quantity" required min="1" minlength="1" maxlength="3">
+                                    <input class="form-control issue_med" name="quantity" type="textfield" placeholder="Quantity" disabled required min="1" minlength="1" maxlength="3">
                                     <span class="error_msg" style="position: inherit;"></span>
                                 </div>
                             </td>
