update isseued med and also manage inventory

--- a/templates/issuemedicines.html
+++ b/templates/issuemedicines.html
@@ -39,7 +39,7 @@
         </div>
     </div>
 </div>
-<div class = "col-md-12 mx-auto mt-5">
+<div class = "col-md-12 mx-auto mt-5" id="med_issued">
     <h3 class="text-center">Issued Medicines </h3>
     <div class="row col-md-12 col-xs-12 mt-3">
         <div class="table-responsive text-center">
@@ -53,12 +53,6 @@
                 </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td><div class="p_age"></div></td>
-                        <td><div class="p_address"></div></td>
-                        <td><div class="p_doa"></div></td>
-                        <td><div class="p_tob"></div></td>
-                    </tr>
                 </tbody>
             </table>
         </div>
