--- a/templates/addpatient.html
+++ b/templates/addpatient.html
@@ -18,7 +18,7 @@
                             </th>
                             <th>
                                 <div class="form-group input-group pl-3">
-                                    <input class="form-control" name="ssn_id" id="ssn_id" type="textfield" placeholder="Patient ID" required minlength="9" maxlength="9">
+                                    <input class="form-control add_patient" name="ssn_id" id="ssn_id" type="textfield" placeholder="Patient ID" required minlength="9" maxlength="9">
                                     <span class="error_msg"></span>
                                  </div>
                             </th>
