--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,11 +8,12 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'css/style.css') }}" />
         
         <!-- JavaScripts -->
-        <script text = "text/javascript" src = "{{ url_for('static', filename = 'js/jquery-3.3.1.js') }}"></script>
-        <script type = "text/javascript" src = "{{ url_for('static', filename = 'js/bootstrap.min.js') }}"></script>
-        <script type = "text/javascript" src = "{{ url_for('static', filename = 'js/jquery.min.js') }}"></script>
-        <script type = "text/javascript" src = "{{ url_for('static', filename = 'js/jquery.validate.min.js') }}"></script>
-        <script type = "text/javascript" src = "{{ url_for('static', filename = 'js/index.js') }}" ></script>
+        <script text = "text/javascript" src = "{{ url_for('static', filename = 'js/external/jquery-3.3.1.js') }}"></script>
+        <script type = "text/javascript" src = "{{ url_for('static', filename = 'js/external/bootstrap.min.js') }}"></script>
+        <script type = "text/javascript" src = "{{ url_for('static', filename = 'js/external/jquery.min.js') }}"></script>
+        <script type = "text/javascript" src = "{{ url_for('static', filename = 'js/external/jquery.validate.min.js') }}"></script>
+        <script type = "text/javascript" src = "{{ url_for('static', filename = 'js/internal/index.js') }}" ></script>
+        <script type = "text/javascript" src = "{{ url_for('static', filename = 'js/internal/functions.js') }}"></script>
     </head>
     <body>
 
