--- a/templates/diagnostics.html
+++ b/templates/diagnostics.html
@@ -3,7 +3,7 @@
 {% block title %}Issue Diagnosticss{% endblock %}
 
 {% block content %}
-<form class="col-sm-12" action="{{ url_for('Diagnostics') }}" method="post">
+<form class="col-sm-12" action="{{ url_for('addDiagnostics') }}" method="post">
 <div class = "col-md-12 mx-auto">
     <h3 class="text-center">Search Patient </h3>
     <div class="row col-md-12 col-xs-12 mt-3">
@@ -23,7 +23,7 @@
                     <tr>
                         <td>
                             <div>
-                                <input class="form-control issue_med" name="ssn_id" id="ssn_id" type="textfield" placeholder="Patient ID" required minlength="9" maxlength="9">
+                                <input class="form-control add_diagno" name="ssn_id" id="ssn_id" type="textfield" placeholder="Patient ID" required minlength="9" maxlength="9">
                                 <span class="error_msg" style="position: inherit;margin: 0;margin-top: 10px;"></span>
                             </div>
                         </td>
@@ -39,15 +39,15 @@
         </div>
     </div>
 </div>
-<div class = "col-md-12 mx-auto mt-5" id="med_issued">
+<div class = "col-md-12 mx-auto mt-5" id="diagno_conduct">
     <h3 class="text-center">Diagnostics Conducted </h3>
-    <div class="row col-md-12 col-xs-12 mt-3">
+    <div class="row col-md-8 col-xs-8 mt-3 mx-auto">
         <div class="table-responsive text-center">
             <table class="table table-striped table-hover table-condensed table-bordered" id="Table">
                 <thead>
                 <tr class="info">
                     <th>Diagnostic</th>
-                    <th>Charge</th>
+                    <th>No. of times Conducted</th>
                     <th>Amount</th>
                 </tr>
                 </thead>
@@ -58,20 +58,19 @@
     </div>
 </div>
 <div class="form-group input-group mt-3">
-    <input type="button" value="Issue New Medicines" class="btn mx-auto issue_med">
+    <input type="button" value="Add New Diagnostics" class="btn mx-auto add_diagno">
 </div>
-<div class = "col-md-12 mx-auto mt-3" id="issue_med">
-    <div class="row col-md-12 col-xs-12 mt-3">
+<div class = "col-md-12 mx-auto mt-3" id="add_diagno">
+    <div class="row col-md-8 col-xs-8 mt-3 mx-auto">
         
             <div class="form-group input-group">
-                <input type="button" value="Add Row" class="btn add_row1">
+                <input type="button" value="Add Row" class="btn add_row">
             </div>
             <div class="table-responsive text-center">
                 <table class="table table-striped table-hover table-condensed table-bordered" id="Table">
                     <thead>
                     <tr class="info">
                         <th>Diagnostic</th>
-                        <th>Charge</th>
                         <th>Amount</th>
                     </tr>
                     </thead>
@@ -79,17 +78,10 @@
                         <tr>
                             <td>
                                 <div>
-                                    <input class="form-control issue_med" name="name" type="textfield" placeholder="Name" required minlength="2" maxlength="50">
+                                    <input class="form-control add_diagno" name="name" type="textfield" placeholder="Name" required minlength="2" maxlength="50">
                                     <span class="error_msg" style="position: inherit;"></span>
                                 </div>
                             </td>
-                            <td>
-                                <div>
-                                    <input class="form-control issue_med" name="charge" type="textfield" placeholder="Charge" disabled required min="1" minlength="1" maxlength="3">
-                                    <span class="error_msg" style="position: inherit;"></span>
-                                </div>
-                            </td>
-                           
                             <td><input class="form-control" name="amount" type="textfield" required disabled></td>
                         </tr>
                     </tbody>
