--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -23,10 +23,7 @@
         <div class="subnavbtn">Diagnostics <i class="fa fa-caret-down"></i></div>
         {% if session['usert']=="DSE" %}
         <div class="subnav-content">
-          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient</a>
-          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient sdfsf</a>
-          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient</a>
-          <a href="{{ url_for('addpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Add Patient</a>
+          <a href="{{ url_for('addDiagnostics') }}" class="nav-link {% if diagnostics %}active{% endif %}">Add Diagnostics</a>
         </div>
         {% endif %}
       </div>
