--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -5,9 +5,11 @@
         {% if session['usert']=="RDE" %}
         <div class="subnav-content">
           <a href="{{ url_for('addpatient') }}" class="nav-link {% if addpatient %}active{% endif %}">Add Patient</a>
-          <a href="{{ url_for('searchpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">Search Patient</a>
+          <a href="{{ url_for('searchpatient') }}" class="nav-link {% if searchpatient %}active{% endif %}">Search Patient</a>
           <a href="{{ url_for('editpatient') }}" class="nav-link {% if editpatient %}active{% endif %}">Edit Patient</a>
-          <a href="{{ url_for('viewpatient') }}" class="nav-link {% if addcustomer %}active{% endif %}">View all Patients</a>
+          <a href="{{ url_for('deletepatient') }}" class="nav-link {% if deletepatient %}active{% endif %}">Delete Patient</a>
+          <a href="{{ url_for('raisebill') }}" class="nav-link {% if raisebill %}active{% endif %}">Raise Bill</a>
+          <a href="{{ url_for('viewpatient') }}" class="nav-link {% if viewpatient %}active{% endif %}">View all Patients</a>
         </div>
         {% endif %}
       </div>
@@ -15,7 +17,7 @@
         <div class="subnavbtn">Pharmacy <i class="fa fa-caret-down"></i></div>
         {% if session['usert']=="pharmacist" %}
         <div class="subnav-content">
-          <a href="{{ url_for('issuemedicines') }}" class="nav-link {% if addcustomer %}active{% endif %}">Issue Medicines</a>
+          <a href="{{ url_for('issuemedicines') }}" class="nav-link {% if issuemedicines %}active{% endif %}">Issue Medicines</a>
         </div>
         {% endif %}
       </div>
