set form url to raisebill

--- a/templates/raisebill.html
+++ b/templates/raisebill.html
@@ -3,7 +3,7 @@
 {% block title %}Raise Bill{% endblock %}
 
 {% block content %}
-<form class="col-sm-12" action="{{ url_for('issuemedicines') }}" method="post">
+<form class="col-sm-12" action="{{ url_for('raisebill') }}" method="post">
 <div>
     <h3 class="text-center">Patient Billing</h3>
     <div class="mt-3">
