--- a/templates/addpatient.html
+++ b/templates/addpatient.html
@@ -13,12 +13,12 @@
                         <tr>
                             <th>
                                 <div class="form-group input-group">
-                                    <label class="pl-3" for="ssn_id">Patient ID *</label>
+                                    <label class="pl-3" for="ssn_id">Patient SSN ID *</label>
                                 </div>
                             </th>
                             <th>
                                 <div class="form-group input-group pl-3">
-                                    <input class="form-control add_patient" name="ssn_id" id="ssn_id" type="textfield" placeholder="Patient ID" required minlength="9" maxlength="9">
+                                    <input class="form-control add_patient ssn_id" name="ssn_id" id="ssn_id" type="textfield" placeholder="Patient SSN ID" required minlength="9" maxlength="9">
                                     <span class="error_msg"></span>
                                  </div>
                             </th>
