--- a/templates/raisebill.html
+++ b/templates/raisebill.html
@@ -44,10 +44,10 @@
             </table>
             <div class="form-group input-group mt-4 col-sm-12">
                 <div class="float-right col-sm-8">
-                    <label class="pl-3 float-right">No. of days : </label>
+                    <label class="pl-3 float-right nub_days">No. of days : </label>
                 </div>
                 <div class="float-right col-sm-4">
-                    <label class="pl-3 room_price" data-room_price="{% if p_data %}{% if p_data.TypeofBed == 'Single room' %}8000{% endif %}{% if p_data.TypeofBed == 'Semi sharing' %}4000{% endif %}{% if p_data.TypeofBed == 'General ward' %}2000{% endif %}{% endif %}">Bill for Room : </label>
+                    <label class="pl-3 room_price">Bill for Room : </label>
                 </div>
             </div>
         </div>
@@ -114,7 +114,10 @@
         <input type="submit" value="Confirm" class="btn mx-auto">
     </div>
     <div class="float-left col-sm-5">
-        <label class="pl-3">Grand total</label>
+        <div class="form-group input-group">
+            <label class="pl-3 mt-2">Grand total : </label>
+            <input class="form-control ml-3 raise_bill" name="total_amount" type="textfield" required="" disabled="">
+        </div>
     </div>
 </div>
 </form>
